testdata/zkc/invalid/fixed_array_11.zkc
//error:4:12-16:unknown type alias
//error:5:7-8:fixed-array has unresolved type
 fn main() -> () {
    var r:[my_t;2]
    r[0] = 1
 }